--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -128,7 +128,7 @@ CNF、安全相关议题，TBD
 
 #### 关键领域
 
-> https://learn.microsoft.com/en-us/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/manage-observability
+> 微软在其中介绍了关键领域和成熟度模型，可以看作是下一阶段数据治理服务的新方向：https://learn.microsoft.com/en-us/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/manage-observability
 
 大多数数据平台都在数据可观测性的这些关键领域运行：
 
@@ -139,15 +139,6 @@ CNF、安全相关议题，TBD
 - 数据发现
 
 端到端数据可观察性不仅包括捕获事件和测量所有这些组件的指标，还包括关联这些事件和指标。这样就能全面了解企业数据环境的健康状况和可靠性。
-
-
-| Stage                               | Data platform service monitoring                                                                                                                                                                                                                             | Data pipeline performance monitoring                                                                                                    | Data quality monitoring                                                                                                  | Data lineage                                                                                                                                               | Data discovery                                                                                |
-| ----------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
-| **Stage 5 (Highly advanced)** | Data is collected across all the data observability components from one or more data products in a unified view and is correlated using machine learning to find any anomalies. Dashboards track SLO, SLI, and SLA across all data observability components. | Data pipeline performance metrics are tracked across multiple data products. Root cause analysis is completed and driven by the system. | A high Level of trust in data quality is established. Data consumers can verify the reliability of data.                 | Data lineage is visually represented and is used in multiple ways, such as tracing root causes of pipeline failure, data quality analysis, and compliance. | Data consumers can easily find available data that they need.                                 |
-| **Stage 4 (Advanced)**        | Dashboards track SLO, SLI, and SLA across the most critical data observability components. Platform monitoring data and pipeline performance monitoring data are correlated using automation.                                                                | Data incident tools monitor and measure TTD and TTR metrics for any incidents.                                                          | Data quality is maintained through a framework that's usable across multiple data products and tracked using dashboards. | Data lineage includes data quality tags and is connected to data discoverability.                                                                          | Data lineage is now connected to data discoverability and includes data quality tags as well. |
-| **Stage 3 (Evolving)**        | Well defined SLO, SLI, and SLA cover most critical almost all components for Data Observability. Data incidents are managed with specialized tools.                                                                                                          | Platform monitoring data is correlated with data pipeline performance monitoring using some amount of automation.                       | Data quality checks are well defined and mapped to custom metrics.                                                       | Data lineage has matured to contain enough metadata needed for decision making.                                                                            | Data discoverability is achieved using specialized data catalog tools.                        |
-| **Stage 2 (Planning)**        | An initial draft of SLO, SLI, and SLA covers the most critical components needed for data observability. Platform monitoring data is centralized and there is a unified view of the entire data environment. All data incident management is manual.         | Data pipeline performance metrics are defined and measured.                                                                             | Data quality checks exist, but no standard metric is defined, measured, and visualized.                                  | Data lineage is limited to single data product or isn't tracked.                                                                                           | Data discoverability is achieved but no sophisticated tools are used.                         |
-| **Stage 1 Learning**          | Every critical platform service (provider-managed and self-managed) is monitoried in the data landscape.                                                                                                                                                     | Pipeline monitoring is minimal. Failures trigger alerts, but have no insights into any possible cause.                                  | Data quality tests can be run from the pipeline, but no metric is measured or tracked.                                   | Data lineage doesn't exist.                                                                                                                                | Data discoverability doesn't exist.                                                           |
 
 #### 开源标准
 
