--- a/source/_posts/2023-11-02-完蛋我被美女包围了.md
+++ b/source/_posts/2023-11-02-完蛋我被美女包围了.md
@@ -37,11 +37,11 @@ category:
 
 男主是老六的舍友，没上过大学，中专毕业后就来到城里工作，工作内容无非是画展小时工、保安、服务员。那天，他躺在床上，昏昏欲睡，做了一个梦。
 
-梦里的场景是他之前当小时工的画展现场，在梦中他和两个在画展中亮眼的妹子产生了互动：郑梓妍和李云思，梦中的自己和郑搭讪去喝酒，和李赏画表现出自己的鉴赏能力，又打电话给李。接着开始了一系列故事。在梦中的场景里，他变成了一个受过艺术教育，成长环境较好，有绘画天赋的人，但是因为自己生意失败而负债累累。
+梦里的场景是他之前当小时工的画展现场，在梦中他和两个在画展中亮眼的妹子产生了互动：郑梓妍和李云思，梦中的自己和郑搭讪去喝酒，和李赏画表现出自己的鉴赏能力，又在喝醉了之后打电话给李。接着开始了一系列故事。在梦中的场景里，他变成了一个受过艺术教育，成长环境较好，有绘画天赋的人，但是因为自己生意失败而负债累累。
 
 从这一视角，剧中的荒唐之处从粗糙的逻辑漏洞变为了若即若离的设计：
 
-- 现实中，郑梓妍和李云思两人在现实中或许根本没有联系，因为在后续的剧情里也没有看出来他们俩之间有很熟悉的关系
+- 现实中，郑梓妍和李云思两人或许根本没有联系，因为在后续的剧情里也没有看出来他们俩之间有很熟悉的关系
 - 男主根本不懂画，他只是一个受过中专教育（或者义务教育）的底层打工人，他对艺术和艺术家的理解在于那些风流故事，就和抖音上的五分钟了解xxx，你真的了解xxxx一样离谱
     - 李云思会欣赏男主说的东西，本质上是男主梦里的自恋
     - 看到李云思的未完画作时却没有相关评价，反而开始给人家按摩，李云思反而更喜欢他了
