--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -191,13 +191,13 @@ N/A
 - 数据使用的监管：数据的使用情况可以被监管机构进行监管，从而保证数据的合法使用
 - 数据合约的实现：数据的使用情况可以被记录下来，从而可以实现数据的合约，如数据的使用次数、使用时间、使用范围等等，同时促进数据价值评估的发展
 
-> 我将在[定义数据使用可观测性](https://wh1isper.github.io/2023/10/30/2023-10-31-%E5%AE%9A%E4%B9%89%E6%95%B0%E6%8D%AE%E4%BD%BF%E7%94%A8%E5%8F%AF%E8%A7%82%E6%B5%8B%E6%80%A7/)中详细聊聊这一系统概念和系统应该如何实现，以及其是如何与目前的数据分享方法相结合的
+> 我将在[逆转思路：从数据可计量到数据可控](https://wh1isper.github.io/2023/10/30/2023-10-31-%E5%AE%9A%E4%B9%89%E6%95%B0%E6%8D%AE%E4%BD%BF%E7%94%A8%E5%8F%AF%E8%A7%82%E6%B5%8B%E6%80%A7/)中详细聊聊这一系统概念和系统应该如何实现，以及其是如何与目前的数据分享方法相结合的
 
 ### 4.2 从符号主义到连接主义：可观测性与LLM
 
 目前，可观测性展现出符号主义的特征，基于目前已有技术对系统遥测信息等内容进行采集、存储、处理，通过人为地对系统进行分析，对业务进行总结的方式，创建出可视化的仪表盘、规划和实现告警系统、建立供人分析的链路，通过上述流程，我们建立起了一个可观测系统，基于此对问题进行快速定位和解决。我们会发现，这个过程中需要富有经验的SRE人员、高级的开发人员共同参与，其困难和投入是巨大的，这也从侧面显示了相关服务商地价值（DeepFlow、isovalent等公司就是提供了帮助用户优化系统的服务，就如同商业数据库一样）。
 
-> DeepFlow提供的用户案例：https://deepflow.io/zh/ebpf-the-key-technology-to-observability/#0x4-DeepFlow-%E7%94%A8%E6%88%B7%E7%9A%84%E7%9C%9F%E5%AE%9E%E4%BD%BF%E7%94%A8%E6%A1%88%E4%BE%8B
+> DeepFlow提供的用户案例：https://deepflow.io/zh/ebpf-the-key-technology-to-observability
 
 这种情况在运营类的技术活动中屡见不鲜，从安全运营的经验来看，微软基于LLM推出的[Microsoft Security Copilot](https://www.microsoft.com/en-us/security/business/ai-machine-learning/microsoft-security-copilot)为安全团队提供了一个可以持续学习、快速高效的助手，能够让团队更快地处理更多地威胁情报。从这一角度出发，将遥测信息输入LLM大模型，让大模型帮助人们对信息进行提炼，对系统进行分析，对业务进行总结，从而提供更加高效高质量的可观测性，是一个值得探索的方向。
 
