--- a/source/_posts/2023-10-31-定义数据使用可观测性.md
+++ b/source/_posts/2023-10-31-定义数据使用可观测性.md
@@ -1,6 +1,6 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      📕定义数据使用可观测性	# 标题 
+title:      🚀逆转思路：从数据可计量到数据可控	# 标题 
 subtitle:   数据使用可观测性的定义、论证与研究 #副标题
 date:       2023-10-31            # 时间
 author:     Wh1isper                      # 作者
@@ -19,3 +19,9 @@ category:
 ---
 
 ...
+
+数据使用可观测性——数据分享时代的计量手段
+
+传统观念：可控实现之后，才能实现可计量
+
+我的想法：可控和可计量可以是分开的，可控可以依赖可计量的反馈进行决策
