--- a/source/_posts/2023-11-02-完蛋我被美女包围了.md
+++ b/source/_posts/2023-11-02-完蛋我被美女包围了.md
@@ -42,8 +42,7 @@ category:
 从这一视角，剧中的荒唐之处从粗糙的逻辑漏洞变为了若即若离的设计：
 
 - 现实中，郑梓妍和李云思两人或许根本没有联系，因为在后续的剧情里也没有看出来他们俩之间有很熟悉的关系
-- 男主根本不懂画，他只是一个受过中专教育（或者义务教育）的底层打工人，他对艺术和艺术家的理解在于那些风流故事，就和抖音上的五分钟了解xxx，你真的了解xxxx一样离谱
-    - 李云思会欣赏男主说的东西，本质上是男主梦里的自恋
+- 男主根本不懂画，他只是一个受过中专教育（或者义务教育）的底层打工人，他对艺术和艺术家的理解在于那些风流故事，就和抖音上的五分钟了解xxx，你真的了解xxxx一样离谱。李云思会欣赏男主说的东西，本质上是男主梦里的自恋
     - 看到李云思的未完画作时却没有相关评价，反而开始给人家按摩，李云思反而更喜欢他了
     - 男主在包下店之后无法开张、糊弄记者、自我放弃，从正面视角来看是不能理解的自暴自弃，没什么好怜悯的，但从梦的视角看，男主根本没有相关体验，如果强行带入，则其中的不自然会让男主很快醒来
     - 从男主作画之类的剧情，包括和肖鹿一起画画也可以看出他对这类创作没有感觉
@@ -63,10 +62,10 @@ category:
 > 借用弗洛伊德之观点，不代表我认为其机械唯物主义是正确的
 > 搜到一篇分析龙王爽文的，有类似：https://zhuanlan.zhihu.com/p/181426773
 
-- 代表浪漫，性感，放浪形骸的郑梓妍：男主并不知道那些酒吧里的富姑娘的生活是怎么样的，但是从那些短视频里，她们喜欢到处玩、到处旅行，她们喜欢酒吧买醉、蹦迪，喜欢尽情玩乐。在梦里给自己创造一个这样少女，迷恋自己，而自己也可以顺势成为平时自己羡慕的，陪着这些姑娘的人。
-- 代表理性、阶级，高级趣味的李云思：男主只在那些高级趣味的场所看到过她们，而男主在潜意识里以为自己看到的那些艺术家的风流趣事，耍嘴皮子可以赢得她们的欢心，她们还会无条件地支持自己。本质上是男主的自卑，同时也不理解、不愿理解，最终以“看不起艺术”的方式退出，又幻想自己能够以“一厢情愿”挽回，而自恋的最高峰是“逃婚”的隐藏结局（甚至埋了一个高中就是网友的伏笔）
-- 代表纯真、无邪、青春的肖鹿：这或许是男主最无忧无虑的一段时光，也或许是男主不曾有过的时光，在自己十七八岁的年纪，和一个同样青春的女孩感受青春的魅力，畅想以后的生活，用自己的双手规划自己的生活，两个人平平淡淡地走下去。我倾向于这是男主最现实的渴望，但他一个底层工作，又能奢望什么青春靓丽大学生呢？
-- 代表童年渴望的、无法触及的沈彗星：沈彗星的倒贴映照出男主在童年的自卑，这或许和其父亲的缺位有关，这个角色也是唯一和其父亲有关联的人。无尽的自卑带来了无尽的幻想，最后童年梦中的那个女孩成了自己的舔狗，自己也通过这种爱慕东山再起，这才补偿了自己的童年阴影。
-- 代表色欲、自恋的林乐清：色欲剧情，附带大和抚子属性，大男子主义，无聊
-- 代表虚荣、物质的钟甄：爽文剧情，资本主义软饭，无聊
+- **代表浪漫，性感，放浪形骸的郑梓妍**：男主并不知道那些酒吧里的富姑娘的生活是怎么样的，但是从那些短视频里，她们喜欢到处玩、到处旅行，她们喜欢酒吧买醉、蹦迪，喜欢尽情玩乐。在梦里给自己创造一个这样少女，迷恋自己，而自己也可以顺势成为平时自己羡慕的，陪着这些姑娘的人。
+- **代表理性、阶级，高级趣味的李云思**：男主只在那些高级趣味的场所看到过她们，而男主在潜意识里以为自己看到的那些艺术家的风流趣事，耍嘴皮子可以赢得她们的欢心，她们还会无条件地支持自己。本质上是男主的自卑，同时也不理解、不愿理解，最终以“看不起艺术”的方式退出，又幻想自己能够以“一厢情愿”挽回，而自恋的最高峰是“逃婚”的隐藏结局（甚至埋了一个高中就是网友的伏笔）
+- **代表纯真、无邪、青春的肖鹿**：这或许是男主最无忧无虑的一段时光，也或许是男主不曾有过的时光，在自己十七八岁的年纪，和一个同样青春的女孩感受青春的魅力，畅想以后的生活，用自己的双手规划自己的生活，两个人平平淡淡地走下去。我倾向于这是男主最现实的渴望，但他一个底层工作，又能奢望什么青春靓丽大学生呢？
+- **代表童年渴望的、无法触及的沈彗星**：沈彗星的倒贴映照出男主在童年的自卑，这或许和其父亲的缺位有关，这个角色也是唯一和其父亲有关联的人。无尽的自卑带来了无尽的幻想，最后童年梦中的那个女孩成了自己的舔狗，自己也通过这种爱慕东山再起，这才补偿了自己的童年阴影。
+- **代表色欲、自恋的林乐清：色欲剧情**，附带大和抚子属性，大男子主义，无聊
+- **代表虚荣、物质的钟甄**：爽文剧情，资本主义软饭，无聊
 
