--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -191,7 +191,7 @@ N/A
 - 数据使用的监管：数据的使用情况可以被监管机构进行监管，从而保证数据的合法使用
 - 数据合约的实现：数据的使用情况可以被记录下来，从而可以实现数据的合约，如数据的使用次数、使用时间、使用范围等等，同时促进数据价值评估的发展
 
-> 我将在[逆转思路：从数据可计量到数据可控](https://wh1isper.github.io/2023/10/30/2023-10-31-%E5%AE%9A%E4%B9%89%E6%95%B0%E6%8D%AE%E4%BD%BF%E7%94%A8%E5%8F%AF%E8%A7%82%E6%B5%8B%E6%80%A7/)中详细聊聊这一系统概念和系统应该如何实现，以及其是如何与目前的数据分享方法相结合的
+> 我将在[逆转思路：从数据可计量到数据可控](https://wh1isper.github.io/2023/10/30/2023-10-31-%E5%AE%9A%E4%B9%89%E6%95%B0%E6%8D%AE%E4%BD%BF%E7%94%A8%E5%8F%AF%E8%A7%82%E6%B5%8B%E6%80%A7/)中详细聊聊这一系统概念和系统应该如何实现，最终服务于数据要素流通市场的发展
 
 ### 4.2 从符号主义到连接主义：可观测性与LLM
 
