--- a/source/_posts/2023-10-31-定义数据使用可观测性.md
+++ b/source/_posts/2023-10-31-定义数据使用可观测性.md
@@ -37,6 +37,8 @@ category:
 
 ## 3. 从可计量的角度出发实现数据使用可控
 
+### 问题
+
 从目前已有的方案来看，人们往往从数据使用可控出发，例如：针对隐私场景的深度学习训练，人们针对数据本身 vs 深度学习的模型及其参数的关系出发，提出了参数/模型动、数据不动的联邦学习技术。再从这种技术的基础上，发展对于数据使用的计量。这样做的缺点十分明显，就是数据使用计量的维度、细粒度等等细节在每个场景下都需要重新设计，而且很难做到通用。反过来，一个没有被广泛应用的计量技术，也无法满足监管方、数据持有方、数据使用方的需求。
 
 这在某种程度上导致了基于数据可用不可见的技术实现了特定场景下数据使用可控，但数据持有方仍然不敢、不愿支持数据流通的现状——数据使用计量的不完整。
@@ -53,10 +55,9 @@ category:
 - 不必依赖于智能合约技术，可以使用现有的技术方案
 - 与数据使用前、后的操作（如数据治理、数据确权）等联动，形成一个完整的数据使用生态
 
-### 架构图
+### 架构
 
-### 谁是可以被信任的
- 
+![引入数据使用计量中心的基础架构](../img/2023-10-31-定义数据使用可观测性/data-usage-measurable.png)
 
 ## 4. 一种可能的未来方向
 
