--- a/source/_posts/2023-12-12-给自己的找工作手记.md
+++ b/source/_posts/2023-12-12-给自己的找工作手记.md
@@ -28,6 +28,11 @@ category:
 - 沟通能力：带领小型团队，在跨团队间沟通
 - 商业能力：从技术创造价值
 
+### 当前诉求
+
+- Go bigger：做更大的业务，更先进更聚焦的技术
+- 更大的平台，或者对我有更大的投入
+
 ## 找一份什么样的工作
 
 ### 工资待遇
