--- a/source/_posts/2023-12-12-给自己的找工作手记.md
+++ b/source/_posts/2023-12-12-给自己的找工作手记.md
@@ -1,6 +1,6 @@
 ---
 layout: post # 使用的布局（不需要改）
-title: 给自己的找工作手记 # 标题
+title: ✍给自己的找工作手记 # 标题
 subtitle: 给自己的找工作手记 #副标题
 date: 2023-12-12 # 时间
 author: Wh1isper # 作者
