--- a/source/_posts/2024-01-09-数字时代的生产关系.md
+++ b/source/_posts/2024-01-09-数字时代的生产关系.md
@@ -1,7 +1,7 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      数字时代的生产关系	# 标题 
-subtitle:   当大厂把握数据后，如何形成新的隐形托拉斯 #副标题
+title:      ✍数字时代的生产关系	# 标题 
+subtitle:   当大厂垄断数据后，如何形成新的隐形托拉斯 #副标题
 date:       2024-01-09            # 时间
 author:     Wh1isper                      # 作者
 banner_img: /img/tag-bg-o.jpg
