--- a/source/_posts/2024-01-10-AIGC与数字经济.md
+++ b/source/_posts/2024-01-10-AIGC与数字经济.md
@@ -36,7 +36,7 @@ category:
 
 ## 生成式娱乐
 
-AIGC对游戏制作行业带来了前所未有的变革，Nvidia发布4090Super并将AI生成NPC对话作为其杀手级应用进行宣传，让我们看到了资本市场对生成式娱乐的买单。实际上，想象一个由AI生成、定制化的娱乐，就如同阿西莫夫短片《dreaming is a private thing》中人们从高端的、有艺术色彩的大师梦，到大众化的、快消梦一样，最后人们将享受到定制化的、具有个人特色的生成梦。届时，上一个时代的短视频注意力经济，将被生成式娱乐所取代，而把握生成式娱乐技术的公司，不管是入口（VR/AR）、算力、算法，都有可能成为最大的获胜者。
+AIGC对游戏制作行业带来了前所未有的变革，Nvidia发布4090Super并将AI生成NPC对话作为其杀手级应用进行宣传，让我们看到了资本市场对生成式娱乐的买单。实际上，想象一个由AI生成、定制化的娱乐，就如同阿西莫夫短篇《Dreaming is a private thing》中人们从高端的、有艺术色彩的大师梦，到大众化的、快消梦一样，最后人们将享受到定制化的、具有个人特色的生成梦。届时，上一个时代的短视频注意力经济，将被生成式娱乐所取代，而把握生成式娱乐技术的公司，不管是入口（VR/AR）、算力、算法，都有可能成为最大的获胜者。
 
 或许有人会宣称这是对人类创造力的亵渎，但抖音短视频，“小帅和小美”的五分钟电影剪辑、营销号搬运号的所作所为，难道不是对人类创造力的亵渎吗？如果是，那有如何解释后现代性在解构这些奶头乐行为时所展现出的人类的思考与创造呢？因此，我个人认为是有些人将对自己想象力贫瘠以及媒体渲染出的恐惧、灌输的狗屁不通的道理当作了时自己的观点，似乎听起来很有道理，实际上自欺欺人。
 
