Update url and conclusion

--- a/source/_posts/2024-11-13-千人千面与信息茧房.md
+++ b/source/_posts/2024-11-13-千人千面与信息茧房.md
@@ -22,4 +22,4 @@ category:
 
 这一模式下，让我想到里信息茧房理论。实际上，在UGC时代，大厂们并不想一直给一个人推荐固定的内容，这将导致人们很快就厌倦，反而降低了用户的使用时长。而在AIGC时代则恰恰相反，AIGC本身就带有多样性的特点，平台可能更希望推荐用户熟悉的AIGC内容，使得用户不停地使用这一工具，再通过用户画像等手段，告诉AIGC如何更加取悦用户。这其中的区别在于，UGC需要等待创作者创作，再到消费者发现作品，而AIGC可以直接实现消费者自己创作（或参与创作），然后直接进行消费。其带来的结果是：AIGC应用进行信息茧房的塑造能够实现正反馈，即越来越抓住用户，而UGC应用进行信息茧房的塑造只会更快地让用户疲惫。
 
-这让我想起了我在上一篇文章谈到的，是否AIGC时代代表着数据资产的公地悲剧？也代表着人们的精神文明将受到一次考验和冲击？
+这让我想起了我在[上一篇文章](https://wh1isper.github.io/2024/11/06/2024-11-07-AIGC-for-what/)谈到的，是否AIGC时代代表着数据资产的公地悲剧？也代表着人们的精神文明将受到一次考验和冲击？与此同时，“自由国家”的瘾君子问题，让我们看到了医药复合体是如何压榨人类的精神和肉体的，如果AI发展下去，是否一定指向的是赛博飞升的未来呢？
