--- a/source/_posts/2024-12-23-llm-as-os.md
+++ b/source/_posts/2024-12-23-llm-as-os.md
@@ -4,7 +4,7 @@ title: LLM as OS-Computing without human # 标题
 subtitle: LLM as OS-Computing without human #副标题
 date: 2024-12-23 # 时间
 author: Wh1isper # 作者
-banner_img: /img/post-bg-unix-linux.jpg
+banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
 tags: #标签
   - LLM
