--- a/source/_posts/2024-12-23-llm-as-os.md
+++ b/source/_posts/2024-12-23-llm-as-os.md
@@ -49,7 +49,7 @@ OpenAI 是 LLM+互联网时代数据的组合
 
 ### Agent - 自动化
 
-Agent 是通过 LLM 或者其他工程化手段，实现自动化的组件。例如通过赋予 LLM 一些工具函数来让 LLM 进行实现路径规划。类似于经典人工智能课程中的猴子摘香蕉问题。这方面，anthropic有一篇非常好的文章介绍各种Agent的设计模式：https://www.anthropic.com/research/building-effective-agents，推荐感兴趣的人都读一读。
+Agent 是通过 LLM 或者其他工程化手段，实现自动化的组件。例如通过赋予 LLM 一些工具函数来让 LLM 进行实现路径规划。类似于经典人工智能课程中的猴子摘香蕉问题。这方面，anthropic有一篇[非常好的文章](https://www.anthropic.com/research/building-effective-agents)介绍各种Agent的设计模式，推荐感兴趣的人都读一读。
 
 在这一方面有丰富系统设计经验的工程人员将有很大的发挥空间，将复杂的问题进行简化，最终交由LLM解决，或者等待LLM的能力提升，将更大的自主权交给LLM，这时LLM的应用范围则会更广。
 
