--- a/source/_posts/2025-02-05-begin-for-2025.md
+++ b/source/_posts/2025-02-05-begin-for-2025.md
@@ -40,6 +40,8 @@ category:
 
 - LLM应用开发 +
 
+另外，感觉自己对业务的参与还是不够，需要更多地了解业务，包括商业模式上的思考，也需要持续积累！
+
 ## 近期思考
 
 Deepseek的成功代表了两点：LLM技术不可能被某一国垄断，即技术自由流动；LLM的普惠化正在路上，也是LLM产业化、真正兑现商业价值的唯一方式。
