--- a/source/_posts/2025-02-05-begin-for-2025.md
+++ b/source/_posts/2025-02-05-begin-for-2025.md
@@ -36,11 +36,11 @@ category:
 
 - 云的使用对于业务的快速发展是有利的，创业公司可以很快地基于此构建产品，但云的成本也是一个问题，需要有一些成本控制的方法，必要的时候可以考虑自建
 
-年底加入 Arco 后，我更多的是作为IC负责大模块的开发和整体系统集成、DevOps工作，明显感觉到责任划分更加明确、自己的职责也更少，不过这不是我放松的理由，我需要利用我的时间探索LLM的边界，正如所有从业者都在做的一样，仍然没有一个范式的提出，大家都在尽可能的探索如何让模型更好地服务于业务。在春节前的版本rush中，我也算是入门了基于LLM的应用开发，这也是我在 2025 年的一个重要方向。
+年底加入 Arco 后，我更多的是作为工程师负责模块的开发和整体系统集成、DevOps工作，明显感觉到责任划分更加明确、自己的职责也更少，不过这不是我放松的理由，我很清楚我花更多精力和时间探索LLM的边界，正如所有从业者都在做的一样。目前来看，仍然没有一个四海皆准的范式，模型也在持续进步，大家都在尽可能的探索如何让模型更好地服务于业务。在春节前的版本rush中，我也算是入门了基于LLM的应用开发。
 
 - LLM应用开发 +
 
-另外，感觉自己对业务的参与还是不够，需要更多地了解业务，包括商业模式上的思考，也需要持续积累！
+在工作中我仍然存在很多不足，一方面是经验上的，但更重要的是认知上的，目前深感对LLM驱动开发的研究还不够深入，仅有一些基础的实践和基础的知识，这方面的提升将是2025年的重点。
 
 ## 近期思考
 
