--- a/source/_posts/2025-02-05-begin-for-2025.md
+++ b/source/_posts/2025-02-05-begin-for-2025.md
@@ -53,3 +53,10 @@ Deepseek的成功代表了两点：LLM技术不可能被某一国垄断，即技
 近期来看，我需要更加深入Agent相关技术，从function call、手动规划到自动规划，这可能是2025年贯穿全年的主题。其次，注意一些LLM的微调、蒸馏方案，这可能是2025年对于业务来说比较重要的技术积累。
 
 从全世界的角度上来看，2025年LLM应当实现在推理层面的scaling law，我不认为2025会在多模态和机器人上有重大突破，但推理层面的进一步研究，将带来模型能力、稳定性和成本的大幅度优化。
+
+## 最后一点
+
+个人上，2024的减肥大业没有完成，甚至没有什么进展，2025需要从两方面入手：
+
+- 持续的练：首先是保持一定的运动量，每日健身房和周末的打球活动需要持续下去
+- 持续的减：其次是饮食的控制，虽然很多时候很忙，又想着放纵一下，但是对每周的放纵次数要有一些限制
