--- a/source/_posts/2025-02-05-begin-for-2025.md
+++ b/source/_posts/2025-02-05-begin-for-2025.md
@@ -42,6 +42,8 @@ category:
 
 在工作中我仍然存在很多不足，一方面是经验上的，但更重要的是认知上的，目前深感对LLM驱动开发的研究还不够深入，仅有一些基础的实践和基础的知识，这方面的提升将是2025年的重点。
 
+另外，我更意识到一个人赢得尊重不一定只能依靠实力，只依靠实力最后总会有力所不及的地方，而真正让一个人赢得尊重的，应该是其在解决问题的过程中表现出的态度、方法，重要的是旅途中的风景和收获，而不是终点的荣誉和地位。
+
 ## 近期思考
 
 Deepseek的成功代表了两点：LLM技术不可能被某一国垄断，即技术自由流动；LLM的普惠化正在路上，也是LLM产业化、真正兑现商业价值的唯一方式。
