--- a/source/_posts/2025-02-11-大数定律下的llm应用问题.md
+++ b/source/_posts/2025-02-11-大数定律下的llm应用问题.md
@@ -29,8 +29,10 @@ category:
 
 ### 大参数MoE成为Agent的必要基础
 
-从Deepseek和kimi的技术报告可以看出，让模型在推理侧使用更多的算力，将显著提升模型的性能。另外，研究人员也发现，当给LLM更少限制的时候，reasoning的威力更强。有趋势表明，在足够的推理token的情况下，不需要人工限制就可以让模型reasoning出合适的结果。而对于强人工限制的Agent，增加推理算力并不能显著提升其性能。这可能是LLM应用在这一阶段的“苦涩的教训”。
+从Deepseek和kimi的技术报告可以看出，让模型在推理侧使用更多的算力，将显著提升模型的性能。另外，研究人员也发现，当给LLM更少限制的时候，reasoning的威力更强。有趋势表明，在足够的推理token的情况下，不需要人工限制就可以让模型reasoning出合适的结果。而对于强人工限制的Agent，增加推理算力并不能显著提升其性能。这可能是LLM应用在这一阶段的“苦涩的教训”
 
 ### 通过reasoning构建LLM原生应用
 
 只是一个想法，根据上面的原理，我们可以推断出，通用Agent应当是下一阶段的重点发展方向，对于Agent的MoE应当基于reasoning模型实现
+
+所谓的自主化Agent，或者说像Devin这样的LLM实习生，很幸运地碰上了reasoning模型的发展，或许将有一些可行的技术实现出来。同时，关注推理成本的降低，目前看，推理token的增加可以提升性能，那么对于所有人来说，能够通过更少的钱获得更多的推理算力，也可以产生巨大的经济价值
