--- a/source/_posts/2025-10-19-about-me.md
+++ b/source/_posts/2025-10-19-about-me.md
@@ -17,7 +17,7 @@ category:
 
 > 当我开始搜索死亡时，我开始平静下来了。
 
-[](../img/2025-10-19-about-me/suicide_meme.jpg)
+![](../img/2025-10-19-about-me/suicide_meme.jpg)
 
 我是一个自认为有严重焦虑症和抑郁症的人，之所以没有确诊，是因为我在自己去麦当劳买冰淇淋这件事上都觉得不安，我想人生中的很多事，或许我都没有力量面对。也许这与你看到的我完全不一样，不用怀疑，那是假扮的我。
 
@@ -37,7 +37,7 @@ category:
 
 现在，我有两只小猫，一只美短叫布布，是个男生，他是那种“一米猫”，不喜欢和人类贴贴，但是照看着家里的每一个人（和动物），最近他学会了要吃的，一看到人走出房门就会带人去放冻干的柜子上，他是家里最聪明的宝宝，或许也是最像我的宝宝；另一只英短叫娜娜，她是黏人类型的小猫，虽然有点笨笨的，但是一叫就会应，一摸就会响，一醒就会找人。我和我的爱人共同抚养他们，爱护他们，他们也不至于将我们弃养。我和我的爱人还没有结婚，但我们已经分享了彼此接近一半的人生，我很希望我能陪她走到永远。我希望能够赚一些钱，做出一些属于真正的我而不是面具之人的事情，使之有获得感，能够和爱人、猫猫体验人生与猫生，在猫猫寿终正寝的时候陪在他们身旁，诉说着他们陪伴我的时光。
 
-[](../img/2025-10-19-about-me/about_happy_meme.jpg)
+![](../img/2025-10-19-about-me/about_happy_meme.jpg)
 
 但我找不到这些东西的意义，我并非不快乐，并非悲伤，但这些东西都像是膝跳反射一样，体验之时觉得真切，有过去之后，我仍然一直在想存在的意义是什么，它就像“不要想大象一样”，我仍然没有找到房间里的大象——那个存在的意义。
 
@@ -58,6 +58,6 @@ category:
 
 我为我这一生的龌龊、无耻、懦弱道歉，它们支撑着我前进，却是最终压垮我的。我感谢那些相信我的，爱护我的人，我不想再给你们添麻烦，但我也总是被那些念头困扰，我无法想象你们的悲伤，也无意为你们带去悲伤，但如果我认为悲伤亦是虚无，而人们总会找到其出路，似乎亦无不可……
 
-[](../img/2025-10-19-about-me/suicide_ending.jpg)
+![](../img/2025-10-19-about-me/suicide_ending.jpg)
 
 既然你已经读完了全文，我希望有人能够发现这篇文章。如果我死了，请帮我公开，作为我对所有爱我与恨我的人的道歉，作为我对所有对我怀有善意的人的感谢。如果我尚且在世，或许是我还没做出决定，或许是我还在游荡着，或许是我真的找寻到了意义，如果你对这些事感兴趣，也欢迎你和我聊聊这些事，如果你被我伤害过，抱歉，我没有勇气当面对你说对不起，但是我希望在某刻获得你的原谅。
