--- a/source/_posts/2025-10-19-about-me.md
+++ b/source/_posts/2025-10-19-about-me.md
@@ -56,7 +56,7 @@ category:
 - 我想问问我父亲，让他讲讲他的一生，讲讲他对我的看法，他在我小时候总说只要我过的幸福就好了，可是我似乎还未学会如何幸福
 - 我想问问我姑爹，他在人生冒险，他的信仰与精神，现在我只记得他的背影，我甚至差一点忘记了他的名字
 
-我为我这一生的龌龊、无耻、懦弱道歉，它们支撑着我前进，却是最终压垮我的。我感谢那些相信我的，爱护我的人，我不想再给你们添麻烦，但我也总是被那些念头困扰，我无法想象你们的悲伤，也无意为你们带去悲伤，但如果我认为悲伤亦是虚无，而人们总会找到其出路，似乎亦无不可……
+我害怕遗忘这些意义，却又难以鼓起勇气找寻意义。我为我这一生的龌龊、无耻、懦弱道歉，它们支撑着我前进，却是最终压垮我的。我感谢那些相信我的，爱护我的人，我不想再给你们添麻烦，但我也总是被那些念头困扰，我无法想象你们的悲伤，也无意为你们带去悲伤，但如果我认为悲伤亦是虚无，而人们总会找到其出路，似乎亦无不可……
 
 ![](../img/2025-10-19-about-me/suicide_ending.jpg)
 
