--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      📕可观测性行业发展与机遇	# 标题
-subtitle:   可观测性行业发展与机遇 #副标题
-date:       2023-10-30           # 时间
+layout: post
+title: 📕可观测性行业发展与机遇
+subtitle: 可观测性行业发展与机遇
+description: 系统梳理可观测性行业的发展脉络，从分布式追踪、日志、度量三个维度解读可观测性技术，探讨行业机遇与未来发展方向。
+date: 2023-10-30
 author:     Wh1isper                      # 作者
 banner_img: /img/tag-bg-o.jpg
 catalog: true                       # 是否归档
