--- a/source/_posts/2023-10-31-定义数据使用可观测性.md
+++ b/source/_posts/2023-10-31-定义数据使用可观测性.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      🚀逆转思路：从数据可计量到数据可控	# 标题
-subtitle:   以数据计量为基础的数据可控实现 #副标题
-date:       2023-10-31            # 时间
+layout: post
+title: 🚀逆转思路：从数据可计量到数据可控
+subtitle: 以数据计量为基础的数据可控实现
+description: 探讨数据使用可控可计量的实现路径，分析隐私计算、智能合约等技术手段的局限性，提出从可计量角度实现数据可控的新思路。
+date: 2023-10-31
 author:     Wh1isper                      # 作者
 banner_img: /img/tag-bg-o.jpg
 catalog: true                       # 是否归档
