--- a/source/_posts/2023-11-02-完蛋我被美女包围了.md
+++ b/source/_posts/2023-11-02-完蛋我被美女包围了.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      🤔黄粱一梦：《完蛋！我被美女包围了！》	# 标题
-subtitle:    《完蛋！我被美女包围了！》是一场清醒梦	 #副标题
-date:       2023-11-02              # 时间
+layout: post
+title: 🤔黄粱一梦：《完蛋！我被美女包围了！》
+subtitle: 《完蛋！我被美女包围了！》是一场清醒梦
+description: 从弗洛伊德精神分析角度解读游戏《完蛋！我被美女包围了！》，将其视为一位普通工友的白日做梦，探讨游戏叙事的深层含义。
+date: 2023-11-02
 author:     Wh1isper                      # 作者
 catalog: true                       # 是否归档
 tags:                               #标签
