--- a/source/_posts/2023-12-12-给自己的找工作手记.md
+++ b/source/_posts/2023-12-12-给自己的找工作手记.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: ✍给自己的找工作手记 # 标题
-subtitle: 给自己的找工作手记 #副标题
-date: 2023-12-12 # 时间
+layout: post
+title: ✍给自己的找工作手记
+subtitle: 给自己的找工作手记
+description: 记录个人求职规划，包括五年目标、当前诉求、工资待遇期望，以及如何从IC成长为架构师和CTO的职业发展路径。
+date: 2023-12-12
 author: Wh1isper # 作者
 catalog: true # 是否归档
 tags: #标签
