--- a/source/_posts/2024-01-09-数字时代的生产关系.md
+++ b/source/_posts/2024-01-09-数字时代的生产关系.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      ✍数字时代的生产关系	# 标题
-subtitle:   当大厂垄断数据后，如何形成新的隐形托拉斯 #副标题
-date:       2024-01-09            # 时间
+layout: post
+title: ✍数字时代的生产关系
+subtitle: 当大厂垄断数据后，如何形成新的隐形托拉斯
+description: 分析平台如何通过免费服务收集用户数据形成垄断优势，探讨数据剩余价值理论、大数据杀熟等获利方式及数据反垄断问题。
+date: 2024-01-09
 author:     Wh1isper                      # 作者
 banner_img: /img/tag-bg-o.jpg
 catalog: true                       # 是否归档
