--- a/source/_posts/2024-01-13-为什么我要逃离网安行业.md
+++ b/source/_posts/2024-01-13-为什么我要逃离网安行业.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      ❗为什么我要逃离网安行业	# 标题
-subtitle:   在错误的时间想做正确的事是最大的错误 #副标题
-date:       2024-01-13            # 时间
+layout: post
+title: ❗为什么我要逃离网安行业
+subtitle: 在错误的时间想做正确的事是最大的错误
+description: 深度剖析国内网络安全行业的现状与问题，探讨卖盒子模式的弊端与行业未来。
+date: 2024-01-13
 author:     Wh1isper                      # 作者
 banner_img: /img/tag-bg-o.jpg
 catalog: true                       # 是否归档
