--- a/source/_posts/2024-02-09-春节快乐.md
+++ b/source/_posts/2024-02-09-春节快乐.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      🧨春节快乐，聊聊2024展望	# 标题
-subtitle:   一篇普通的春节随笔 #副标题
-date:       2024-02-09            # 时间
+layout: post
+title: 🧨春节快乐，聊聊2024展望
+subtitle: 一篇普通的春节随笔
+description: 2024年春节随笔，展望制造业升级与金融开放的形势，以及个人的发展规划。
+date: 2024-02-09
 author:     Wh1isper                      # 作者
 banner_img: /img/tag-bg-o.jpg
 catalog: true                       # 是否归档
