--- a/source/_posts/2024-04-20-如何成为一名合格的架构师.md
+++ b/source/_posts/2024-04-20-如何成为一名合格的架构师.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: ⛰如何成为一名合格的架构师 # 标题
-subtitle: 架构师101之我的实践 #副标题
-date: 2024-04-20 # 时间
+layout: post
+title: ⛰如何成为一名合格的架构师
+subtitle: 架构师101之我的实践
+description: 分享初创架构师的实践经验，包括架构设计、Coding能力、沟通、Ops和团队建设等核心素质。
+date: 2024-04-20
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
