--- a/source/_posts/2024-05-02-不需要任何运维工程师.md
+++ b/source/_posts/2024-05-02-不需要任何运维工程师.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: 🔧云计算：不需要运维工程师 # 标题
-subtitle: 至少我们不需要运维工程师了 #副标题
-date: 2024-05-02 # 时间
+layout: post
+title: 🔧云计算：不需要运维工程师
+subtitle: 至少我们不需要运维工程师了
+description: 分析云计算时代传统运维角色的转变，探讨DevOps化开发团队的构建方式。
+date: 2024-05-02
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
