--- a/source/_posts/2024-11-13-千人千面与信息茧房.md
+++ b/source/_posts/2024-11-13-千人千面与信息茧房.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: ☁️千人千面与信息茧房 # 标题
-subtitle: 千人千面与信息茧房 #副标题
-date: 2024-11-13 # 时间
+layout: post
+title: ☁️千人千面与信息茧房
+subtitle: 千人千面与信息茧房
+description: 对比UGC与AIGC时代的信息茧房特征，思考AIGC对精神文明的影响。
+date: 2024-11-13
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
