--- a/source/_posts/2024-12-23-llm-as-os.md
+++ b/source/_posts/2024-12-23-llm-as-os.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: LLM as OS-Computing without human # 标题
-subtitle: LLM as OS-Computing without human #副标题
-date: 2024-12-23 # 时间
+layout: post
+title: LLM as OS-Computing without human
+subtitle: LLM as OS-Computing without human
+description: 探讨基于LLM的下一代操作系统AIOS的构建，分析Context、Agent、Code Gen三大核心组件。
+date: 2024-12-23
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
