--- a/source/_posts/2025-01-01-back-to-2024-and-go-to-2025.md
+++ b/source/_posts/2025-01-01-back-to-2024-and-go-to-2025.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: 从2024，到2025 # 标题
-subtitle: 从2024，到2025 #副标题
-date: 2025-01-01 # 时间
+layout: post
+title: 从2024，到2025
+subtitle: 从2024，到2025
+description: 回顾2024年在AIGC领域的工作经历，展望2025年回归AI技术打磨的目标。
+date: 2025-01-01
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
