--- a/source/_posts/2025-01-27-recents.md
+++ b/source/_posts/2025-01-27-recents.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: 近日小记 # 标题
-subtitle: 近日小记 #副标题
-date: 2025-01-27 # 时间
+layout: post
+title: 近日小记
+subtitle: 近日小记
+description: 记录关于出海机会、LLM上限认知以及线上系统密码学最佳实践的思考。
+date: 2025-01-27
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
