--- a/source/_posts/2025-02-05-begin-for-2025.md
+++ b/source/_posts/2025-02-05-begin-for-2025.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: 2025开年小记 # 标题
-subtitle: 2025开年小记 #副标题
-date: 2025-02-05 # 时间
+layout: post
+title: 2025开年小记
+subtitle: 2025开年小记
+description: 回顾2024年的技术成长与教训，展望2025年Agent技术深入和LLM推理层面的发展方向。
+date: 2025-02-05
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
