--- a/source/_posts/2025-02-11-大数定律下的llm应用问题.md
+++ b/source/_posts/2025-02-11-大数定律下的llm应用问题.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: 大数定律下的llm应用问题 # 标题
-subtitle: 大数定律下的llm应用问题 #副标题
-date: 2025-02-11 # 时间
+layout: post
+title: 大数定律下的llm应用问题
+subtitle: 大数定律下的llm应用问题
+description: 分析Reasoning模型的幻觉问题，探讨大参数MoE和Reasoning对Agent开发的重要性。
+date: 2025-02-11
 author: Wh1isper # 作者
 banner_img: /img/post-bg-unix-linux.jpg
 catalog: true # 是否归档
