--- a/source/_posts/2025-02-17-走的越快越进入空谷.md
+++ b/source/_posts/2025-02-17-走的越快越进入空谷.md
@@ -1,8 +1,9 @@
 ---
-layout: post # 使用的布局（不需要改）
-title: 走的越快越进入空谷 # 标题
-subtitle: 走的越快越进入空谷 #副标题
-date: 2025-02-17 # 时间
+layout: post
+title: 走的越快越进入空谷
+subtitle: 走的越快越进入空谷
+description: 反思对LLM技术边界的认知，类比自动驾驶与AI编程的发展路径，探讨保持创新的重要性。
+date: 2025-02-17
 author: Wh1isper # 作者
 banner_img: /img/post-bg-coffee.jpeg
 catalog: true # 是否归档
