--- a/source/_posts/2024-01-10-AIGC与数字经济.md
+++ b/source/_posts/2024-01-10-AIGC与数字经济.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      🤖数字经济中的AIGC-产业智能化与生成式娱乐	# 标题
-subtitle:   从产业智能化和生成式娱乐两个角度谈谈AIGC对数字经济的影响 #副标题
-date:       2024-01-10            # 时间
+layout: post
+title: 🤖数字经济中的AIGC-产业智能化与生成式娱乐
+subtitle: 从产业智能化和生成式娱乐两个角度谈谈AIGC对数字经济的影响
+description: 探讨AIGC如何驱动数字经济飞跃，从产业智能化降低AI门槛、到生成式娱乐变革游戏行业，分析算力基建和定制化娱乐的未来趋势。
+date: 2024-01-10
 author:     Wh1isper                      # 作者
 banner_img: /img/tag-bg-o.jpg
 catalog: true                       # 是否归档
