update all desc

--- a/source/_posts/2020-10-04-bigData.md
+++ b/source/_posts/2020-10-04-bigData.md
@@ -1,8 +1,9 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      🖊大数据相关笔记	# 标题
-subtitle:   Big Data Note 	 #副标题
-date:       2020-10-04              # 时间
+layout: post
+title: 🖊大数据相关笔记
+subtitle: Big Data Note
+description: 大数据理论基础笔记，包括5V特征、结构化/非结构化/半结构化数据分类，以及Spark等大数据技术概述。
+date: 2020-10-04
 author:     Wh1isper                      # 作者
 banner_img: /img/post-bg-desk.jpg    #读书笔记
 catalog: true                       # 是否归档
